# F1_MLOps

./: .gitignore  README.md  pyproject.toml  training_log.txt
backend/: Cargo.toml  build_log_explicit.txt
backend/src/: lib.rs  sim.rs  types.rs
data/: laps.parquet  sim_config.json
data/cache/2021/: season_schedule.ff1pkl
feature_repo/: feature_store.yaml  features.py
models/ppo_f1/: algorithm_state.pkl
models/ppo_f1/policies/default_policy/: policy_state.pkl
notebooks/: dashboard.py
notes/: Artefact.md  walkthrough.md
src/: calibrate.py  data_ingestion.py  env.py  train_agent.py
src/models/ppo_f1/: algorithm_state.pkl  rllib_checkpoint.json
src/models/ppo_f1/policies/default_policy/: policy_state.pkl  rllib_checkpoint.json
