[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "backend/Cargo.toml"
features = ["pyo3/extension-module"]

[project]
name = "f1-mlops"
version = "0.1.0"
description = "F1 MLOps - Race Strategy Optimization with RL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastf1",
    "feast",
    "gymnasium",
    "marimo",
    "maturin",
    "modin[all]",
    "pandas",
    "plotly",
    "polars",
    "ray[rllib]",
    "scikit-learn",
    "setuptools-rust",
    "torch",
    "pyarrow",
]
